--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ druid = { version = "0.7.0" }
 paho-mqtt = "0.12.0"
 log = "0.4"
 env_logger = "0.9"
+uuid = { version = "1.3", features = ["v4", "fast-rng"] }
